# libzim-glib

./: .earthlyignore  .tool-versions  Earthfile  README.md  meson.build  meson_options.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
flatpak/: com.github.birros.LibZimGLib.json  com.github.birros.LibZimGLib.yml
src/: Zim.metadata  archive-private.h  archive.cpp  archive.h  article-private.h  article.cpp  article.h  entry-private.h  entry.cpp  entry.h  file-iterator-private.h  file-iterator.cpp  file-iterator.h  file-private.h  file.cpp  file.h  fileheader-private.h  fileheader.cpp  fileheader.h  item-private.h  item.cpp  item.h  meson.build  misc.cpp  misc.h  search-iterator-private.h  search-iterator.cpp  search-iterator.h  search-private.h  search.cpp  search.h  suggestion-result-iterator-private.h  suggestion-result-iterator.cpp  suggestion-result-iterator.h  suggestion-search-private.h  suggestion-search.cpp  suggestion-search.h  suggestion-searcher.cpp  suggestion-searcher.h
src/tests/: meson.build  prog.c  prog.py  prog.vala
src/tests/testdata/: Makefile
